--- a/static/locales/de.json
+++ b/static/locales/de.json
@@ -21,6 +21,7 @@
   "bs.label_quality": "Qualit\u00e4t",
   "bs.label_ratio": "Seitenverh\u00e4ltnis",
   "bs.label_format": "Format",
+  "bs.label_model": "Modell",
   "bs.label_description": "Beschreibung",
   "bs.placeholder_description": "Beschreibe, was generiert werden soll",
   "bs.btn_generate": "Generieren",
@@ -63,6 +64,7 @@
   "bs.status_png_failed": "PNG-Konvertierung fehlgeschlagen: {error}",
   "bs.status_camera_denied": "Kamerazugriff verweigert: {error}",
   "bs.status_photo_captured": "Foto aufgenommen und zu Referenzen hinzugef\u00fcgt.",
+  "bs.status_pasted": "{count} Bild(er) aus Zwischenablage eingef\u00fcgt.",
   "bs.status_init_failed": "App konnte nicht initialisiert werden",
   "bs.narration_unavailable": "KI-Erz\u00e4hlung nicht verf\u00fcgbar.",
   "bs.transcription_failed": "Transkription fehlgeschlagen.",
