--- a/static/locales/en.json
+++ b/static/locales/en.json
@@ -25,6 +25,7 @@
   "bs.label_quality": "Quality",
   "bs.label_ratio": "Ratio",
   "bs.label_format": "Format",
+  "bs.label_model": "Model",
   "bs.label_description": "Description",
   "bs.placeholder_description": "Describe what to generate",
   "bs.btn_generate": "Generate",
@@ -69,6 +70,7 @@
   "bs.status_png_failed": "PNG conversion failed: {error}",
   "bs.status_camera_denied": "Camera access denied: {error}",
   "bs.status_photo_captured": "Photo captured and added to references.",
+  "bs.status_pasted": "Pasted {count} image(s) from clipboard.",
   "bs.status_init_failed": "Could not initialize app",
   "bs.narration_unavailable": "AI narration unavailable.",
   "bs.transcription_failed": "Transcription failed.",
